--- a/aulas/cev/aula006/ex004.html
+++ b/aulas/cev/aula006/ex004.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <style>
         body {
+            background-color: rgb(69, 102, 19);
+            color: white;
             font: normal 20pt arial;
         }
     </style>
