--- a/aulas/cev/aula011/ex009.html
+++ b/aulas/cev/aula011/ex009.html
@@ -9,7 +9,14 @@
             background-color: lightgray;
             font-family: Arial, Helvetica, sans-serif;
         }
+
+        h1 {
+            text-align: center;
+        }
+
         main {
+            display: block;
+            margin: auto;
             background-color: gray;
             width: 450px;
             padding: 20px;
