atualizei ex rafa bala

--- a/aulas/rafa_bala/aula01/index.html
+++ b/aulas/rafa_bala/aula01/index.html
@@ -16,8 +16,7 @@
 
     <script>
         function mudarNome() {
-            let nome = 'Ricardo'
-            document.getElementById('mensagemSaudacao').textContent = `Olá, ${nome}.`
+            console.log("Estou clicando muito!")
         }
         
     </script>
