--- a/aulas/cfb_js/aula013/aula013.html
+++ b/aulas/cfb_js/aula013/aula013.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 12 - Operador Spread</title>
+    <title>Aula 13 - If e If Else</title>
 </head>
 <body>
-    <div>Bruno</div>
-    <div>CFB Cursos</div>
-    <div>Novo Curso de JavaScript</div>
-    <script src="aula012.js"></script>
+    <script src="aula013.js"></script>
 </body>
 </html>
