Atualizei CFB js

--- a/aulas/cfb_js/aula017/aula017.html
+++ b/aulas/cfb_js/aula017/aula017.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 16 - while</title>
+    <title>Aula 17 - While</title>
 </head>
 <body>
-    <div>Bruno</div>
-    <div>CFB Cursos</div>
-    <div>Novo Curso de JavaScript</div>
     <script src="aula017.js"></script>
 </body>
 </html>
