--- a/aulas/cfb_js/aula026/aula026.html
+++ b/aulas/cfb_js/aula026/aula026.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 23 - Funções (Parâmetros Rest)</title>
+    <title>Aula 26 - Funções Aninhadas</title>
 </head>
 <body>
-    <script src="aula023.js"></script>
+    <script src="aula026.js"></script>
 </body>
 </html>
