Atualizei CFB js

--- a/aulas/cfb_js/aula031/aula031.html
+++ b/aulas/cfb_js/aula031/aula031.html
@@ -6,6 +6,13 @@
     <title>Aula 31 - GetElementsByTagName</title>
 </head>
 <body>
+    <div id="c1">HTML</div>
+    <div id="c2">CSS</div>
+    <div id="c3">JavaScript</div>
+    <div id="c4">PHP</div>
+    <div id="c5">React</div>
+    <div id="c6">MySQL</div>
+
     <script src="aula031.js"></script>
 </body>
 </html>
