--- a/aulas/cfb_js/aula039/aula039.html
+++ b/aulas/cfb_js/aula039/aula039.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Aula 38 - A Relação dos Elementos no DOM (parte 2)</title>
+    <title>Aula 39 - A Relação dos Elementos no DOM (parte 2)</title>
 </head>
 <body>
     <main>
         <div id="caixa1" class="caixa">
-            <div id="c1" class="curso c1">HTML</div>
+            <div id="c1" class="curso c1">
+                <div id="c1_1">
+                    <div id="c1_2">
+                        HTML
+                    </div>
+                </div>
             <div id="c2" class="curso c1">CSS</div>
             <div id="c3" class="curso c1">JavaScript</div>
             <div id="c4" class="curso c1">PHP</div>
