--- a/aulas/cfb_js/aula043/aula043.html
+++ b/aulas/cfb_js/aula043/aula043.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+        <div id="caixaNovoFuncionalidades" class="caixa">
+            <div id="caixaNovoCurso" class="caixaFuncionalidades">
+                <label>Nome do Curso</label>
+                <input type="text" name="nomeCurso" id="nomeCurso">
+                <button id="btnRemoverCurso">Remover Selecionado</button>
+            </div>
+            <div id="caixaRemoverCurso" class="caixaFuncionalidades">
+                <button id="btnRemoverCurso">Remover Selecionado</button>
+            </div>
+            <div id="caixaCursoSelecionado" class="caixaFuncionalidades">
+                <button id="btnCursoSelecionado">Curso Selecionado</button>
+            </div>            
+        </div>
+        <div id="cauxaCursos" class="caixa">
+            <!--Cursos serão adicionados aqui-->
+        </div>
+    </main>
     <script src="aula043.js"></script>
 </body>
 </html>
