Atualizei CFB js

--- a/aulas/cfb_js/aula043/aula043.html
+++ b/aulas/cfb_js/aula043/aula043.html
@@ -12,7 +12,7 @@
             <div id="caixaNovoCurso" class="caixaFuncionalidades">
                 <label>Nome do Curso</label>
                 <input type="text" name="nomeCurso" id="nomeCurso">
-                <button id="btnRemoverCurso">Remover Selecionado</button>
+                <button id="btnAdicionarNovoCurso">Adicionar</button>
             </div>
             <div id="caixaRemoverCurso" class="caixaFuncionalidades">
                 <button id="btnRemoverCurso">Remover Selecionado</button>
@@ -21,7 +21,7 @@
                 <button id="btnCursoSelecionado">Curso Selecionado</button>
             </div>            
         </div>
-        <div id="cauxaCursos" class="caixa">
+        <div id="caixaCursos" class="caixa">
             <!--Cursos serão adicionados aqui-->
         </div>
     </main>
