--- a/aulas/rocketseat/projeto/index.html
+++ b/aulas/rocketseat/projeto/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevLinks</title>
@@ -8,7 +13,24 @@
 </head>
 <body>
     <div id="container">
-
+        <div id="profile">
+            <img src="assets/avatar.png" alt="Foto Social">
+            <p>@maykbrito</p>
+        </div>
+        <ul>
+            <li>
+                <a href="#">Inscrever-se no NLW</a>
+            </li>
+            <li>
+                <a href="#">Baixar meu e-book</a>
+            </li>
+            <li>
+                <a href="https://github.com/maykbrito" target="_blank">Veja meu portfólio</a>
+            </li>
+            <li>
+                <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o Explorer</a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
