--- a/aulas/rocketseat/projeto/index.html
+++ b/aulas/rocketseat/projeto/index.html
@@ -31,6 +31,28 @@
                 <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o Explorer</a>
             </li>
         </ul>
+        <div id="social-links">
+            <a href="https://github.com/maykbrito" target="_blank">
+                <ion-icon name="logo-github"></ion-icon>
+            </a>
+
+            <a href="https://instagram.com/maykbrito" target="_blank">
+                <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+
+            <a href="https://youtube.com/maykbrito" target="_blank">
+                <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+
+            <a href="https://linkedin.com/in/maykbrito" target="_blank">
+                <ion-icon name="logo-linkedin"></ion-icon>
+            </a>
+        </div>
+        <footer>
+            <p>Feito com ♥ pela <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a></p>
+        </footer>
     </div>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
