--- a/aulas/rocketseat/projeto/index.html
+++ b/aulas/rocketseat/projeto/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
 <head>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +17,14 @@
             <img src="assets/avatar.png" alt="Foto Social">
             <p>@maykbrito</p>
         </div>
+
+        <div id="switch">
+            <button>
+                
+            </button>
+            <span></span>
+        </div>
+
         <ul>
             <li>
                 <a href="#">Inscrever-se no NLW</a>
